--- a/configs/data/erdes.yaml
+++ b/configs/data/erdes.yaml
@@ -1,6 +1,7 @@
-train_csv: "put the path to train.csv here"
-val_csv: "put the path to validation.csv here"
-test_csv: "put the path to test.csv here"
+_target_: src.data.erdes_datamodule.ERDESDataModule
+train_csv: "data/splits/normal_vs_rd/train.csv"
+val_csv: "data/splits/normal_vs_rd/val.csv"
+test_csv: "data/splits/normal_vs_rd/test.csv"
 size: [128, 128, 128]
 batch_size: 4
 num_workers: 0
