--- a/configs/experiment/unetplusplus.yaml
+++ b/configs/experiment/unetplusplus.yaml
@@ -19,7 +19,7 @@ seed: 42
 
 trainer:
   min_epochs: 0
-  max_epochs: 100
+  max_epochs: 50
   gradient_clip_val: 0.5
 
 model:
@@ -33,3 +33,23 @@ data:
 logger:
   tensorboard:
     prefix: "unet++"
+
+callbacks:
+  early_stopping:
+    monitor: "val/acc"  # Monitor validation accuracy
+    patience: 10        # Stop after 10 epochs without improvement
+    mode: "max"         # Higher accuracy is better
+    verbose: True       # Print early stopping messages
+    min_delta: 0.001    # Minimum improvement threshold
+  
+  model_checkpoint:
+    dirpath: ${paths.output_dir}/checkpoints/unetplusplus
+    filename: "unet++_best_epoch_{epoch:03d}"
+    monitor: "val/acc"
+    mode: "max"
+    save_top_k: 1          # Save top 1 best models
+    save_last: True         # Always save last epoch
+    auto_insert_metric_name: False
+    verbose: True
+  
+  rich_progress_bar: null # Added this for tmux output printing
