--- a/configs/model/efficientnet.yaml
+++ b/configs/model/efficientnet.yaml
@@ -1,4 +1,4 @@
-_target_: src.models.efficientnet_module.EfficientNetLitModule
+_target_: src.models.model_module.ModelModule
 
 optimizer:
   _target_: torch.optim.Adam
