--- a/configs/model/swinunetr.yaml
+++ b/configs/model/swinunetr.yaml
@@ -1,4 +1,4 @@
-_target_: src.models.swinunetr_module.SwinUnetRLitModule
+_target_: src.models.model_module.ModelModule
 
 optimizer:
   _target_: torch.optim.Adam
