--- a/configs/experiment/macula_detached_vs_intact/vnet.yaml
+++ b/configs/experiment/macula_detached_vs_intact/vnet.yaml
@@ -19,12 +19,12 @@ seed: 42
 
 trainer:
   min_epochs: 0
-  max_epochs: 50
+  max_epochs: 10
   gradient_clip_val: 0.5
 
 model:
   optimizer:
-    lr: 0.002
+    lr: 1.5e-05
   compile: false
 
 data:
@@ -38,12 +38,12 @@ logger:
     prefix: "vnet"
 
 callbacks:
-  early_stopping:
-    monitor: "val/acc"  # Monitor validation accuracy
-    patience: 10        # Stop after 10 epochs without improvement
-    mode: "max"         # Higher accuracy is better
-    verbose: True       # Print early stopping messages
-    min_delta: 0.001    # Minimum improvement threshold
+  #early_stopping:
+    #monitor: "val/acc"  # Monitor validation accuracy
+    #patience: 10        # Stop after 10 epochs without improvement
+    #mode: "max"         # Higher accuracy is better
+    #verbose: True       # Print early stopping messages
+    #min_delta: 0.001    # Minimum improvement threshold
   
   model_checkpoint:
     dirpath: ${paths.output_dir}/checkpoints/vnet
