changed Normal to Non-RD

--- a/configs/experiment/non_rd_vs_rd/swinunetr.yaml
+++ b/configs/experiment/non_rd_vs_rd/swinunetr.yaml
@@ -5,7 +5,7 @@
 
 defaults:
   - override /data: erdes
-  - override /model: efficientnet
+  - override /model: swinunetr
   - override /callbacks: default
   - override /trainer: default
   - override /logger: tensorboard
@@ -13,7 +13,7 @@ defaults:
 # all parameters below will be merged with parameters from default configurations set above
 # this allows you to overwrite only specified parameters
 
-tags: ["erdes", "efficientnet"]
+tags: ["erdes", "swinunetr"]
 
 seed: 42
 
@@ -28,14 +28,14 @@ model:
   compile: false
 
 data:
-  batch_size: 48
-  train_csv: "data/splits/normal_vs_rd/train.csv"
-  val_csv: "data/splits/normal_vs_rd/val.csv"
-  test_csv: "data/splits/normal_vs_rd/test.csv"
+  batch_size: 12
+  train_csv: "data/splits/non_rd_vs_rd/train.csv"
+  val_csv: "data/splits/non_rd_vs_rd/val.csv"
+  test_csv: "data/splits/non_rd_vs_rd/test.csv"
 
 logger:
   tensorboard:
-    prefix: "efficientnet"
+    prefix: "swinunetr"
 
 callbacks:
   #early_stopping:
@@ -46,8 +46,8 @@ callbacks:
     #min_delta: 0.001    # Minimum improvement threshold
   
   model_checkpoint:
-    dirpath: ${paths.output_dir}/checkpoints/efficientnet
-    filename: "efficientnet_best_epoch_{epoch:03d}"
+    dirpath: ${paths.output_dir}/checkpoints/swinunetr
+    filename: "swinunetr_best_epoch_{epoch:03d}"
     monitor: "val/acc"
     mode: "max"
     save_top_k: 1          # Save top 1 best models
@@ -59,4 +59,4 @@ callbacks:
 
 hydra:
   run:
-    dir: logs/train/runs/normal_vs_rd/efficientnet/${now:%Y-%m-%d_%H-%M-%S}
+    dir: logs/train/runs/rd/swinunetr/${now:%Y-%m-%d_%H-%M-%S}
