--- a/configs/experiment/macula_detached_vs_intact/vit.yaml
+++ b/configs/experiment/macula_detached_vs_intact/vit.yaml
@@ -60,4 +60,4 @@ callbacks:
 
 hydra:
   run:
-    dir: logs/train/runs/macula_detached_vs_intact/vit/${now:%Y-%m-%d_%H-%M-%S}
+    dir: logs/train/runs/md/vit/${now:%Y-%m-%d_%H-%M-%S}
