--- a/configs/experiment/non_rd_vs_rd/resnet3d.yaml
+++ b/configs/experiment/non_rd_vs_rd/resnet3d.yaml
@@ -5,7 +5,7 @@
 
 defaults:
   - override /data: erdes
-  - override /model: unet3d
+  - override /model: resnet3d
   - override /callbacks: default
   - override /trainer: default
   - override /logger: tensorboard
@@ -13,7 +13,7 @@ defaults:
 # all parameters below will be merged with parameters from default configurations set above
 # this allows you to overwrite only specified parameters
 
-tags: ["erdes", "unet3d"]
+tags: ["erdes", "resnet3d"]
 
 seed: 42
 
@@ -29,13 +29,13 @@ model:
 
 data:
   batch_size: 24
-  train_csv: "data/splits/normal_vs_rd/train.csv"
-  val_csv: "data/splits/normal_vs_rd/val.csv"
-  test_csv: "data/splits/normal_vs_rd/test.csv"
+  train_csv: "data/splits/non_rd_vs_rd/train.csv"
+  val_csv: "data/splits/non_rd_vs_rd/val.csv"
+  test_csv: "data/splits/non_rd_vs_rd/test.csv"
 
 logger:
   tensorboard:
-    prefix: "unet3d"
+    prefix: "resnet3d"
 
 callbacks:
   #early_stopping:
@@ -46,8 +46,8 @@ callbacks:
     #min_delta: 0.001    # Minimum improvement threshold
   
   model_checkpoint:
-    dirpath: ${paths.output_dir}/checkpoints/unet3d
-    filename: "unet3d_best_epoch_{epoch:03d}"
+    dirpath: ${paths.output_dir}/checkpoints/resnet3d
+    filename: "resnet3d_best_epoch_{epoch:03d}"
     monitor: "val/acc"
     mode: "max"
     save_top_k: 1          # Save top 1 best models
@@ -59,4 +59,4 @@ callbacks:
 
 hydra:
   run:
-    dir: logs/train/runs/normal_vs_rd/unet3d/${now:%Y-%m-%d_%H-%M-%S}
+    dir: logs/train/runs/rd/resnet3d/${now:%Y-%m-%d_%H-%M-%S}
