--- a/configs/experiment/non_rd_vs_rd/senet.yaml
+++ b/configs/experiment/non_rd_vs_rd/senet.yaml
@@ -5,7 +5,7 @@
 
 defaults:
   - override /data: erdes
-  - override /model: swinunetr
+  - override /model: senet
   - override /callbacks: default
   - override /trainer: default
   - override /logger: tensorboard
@@ -13,7 +13,7 @@ defaults:
 # all parameters below will be merged with parameters from default configurations set above
 # this allows you to overwrite only specified parameters
 
-tags: ["erdes", "swinunetr"]
+tags: ["erdes", "senet"]
 
 seed: 42
 
@@ -25,17 +25,18 @@ trainer:
 model:
   optimizer:
     lr: 1.5e-05
+  scheduler: null
   compile: false
 
 data:
-  batch_size: 12
-  train_csv: "data/splits/normal_vs_rd/train.csv"
-  val_csv: "data/splits/normal_vs_rd/val.csv"
-  test_csv: "data/splits/normal_vs_rd/test.csv"
+  batch_size: 48
+  train_csv: "data/splits/non_rd_vs_rd/train.csv"
+  val_csv: "data/splits/non_rd_vs_rd/val.csv"
+  test_csv: "data/splits/non_rd_vs_rd/test.csv"
 
 logger:
   tensorboard:
-    prefix: "swinunetr"
+    prefix: "senet"
 
 callbacks:
   #early_stopping:
@@ -46,17 +47,17 @@ callbacks:
     #min_delta: 0.001    # Minimum improvement threshold
   
   model_checkpoint:
-    dirpath: ${paths.output_dir}/checkpoints/swinunetr
-    filename: "swinunetr_best_epoch_{epoch:03d}"
+    dirpath: ${paths.output_dir}/checkpoints/senet
+    filename: "senet_best_epoch_{epoch:03d}"
     monitor: "val/acc"
     mode: "max"
     save_top_k: 1          # Save top 1 best models
-    save_last: True         # Always save last epoch
-    auto_insert_metric_name: False
-    verbose: True
+    save_last: true         # Always save last epoch
+    auto_insert_metric_name: false
+    verbose: true
   
   rich_progress_bar: null # Added this for tmux output printing
 
 hydra:
   run:
-    dir: logs/train/runs/normal_vs_rd/swinunetr/${now:%Y-%m-%d_%H-%M-%S}
+    dir: logs/train/runs/rd/senet/${now:%Y-%m-%d_%H-%M-%S}
